--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,5 +3,24 @@
     height: 150px;
 }
 .navbar-default {
-    padding-bottom: 10px;
+    padding-bottom: 30px;
+    padding-top: 40px;
+    background-color: #3b5998;
 }
+#favicon-brand {
+    position: relative;
+    top: -25px;
+    left: 60px;
+}
+#title {
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    color: white;
+    font-size: 50px;
+    font-weight: bold;
+    padding-left: 230px;
+}
+.flashcard {
+    height: 400px;
+    width: 100%;
+}
+
