--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,11 +29,11 @@ body {
 }
 .flashcard {
     height: 450px;
-    width: 400px;
+    width: 100% !important;
 }
 .backside-hints {
     height: 450px;
-    width: 400px;
+    width: 100%;
 }
 .different-hints {
     margin-bottom: 10px;
@@ -51,27 +51,32 @@ body {
     background-color: #3b5998 !important;
     color: white;
     float: right; 
-    height: 27px;
+    height: 25px;
     padding-top: 3px;
     padding-bottom: 10px; 
     position: relative;
     top: 5px; 
-    margin-left: 5px;
+    margin-left: 15px;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 11px;
 }
 .btn-arrow-right {
+    width: 100%;
     position: relative;
-    top: -100px;
-    right: -200px;
+    top: 195px;
     background-color: #3b5998;
     color: white;
 }
 .btn-arrow-left {
+    width: 100%;
     position: relative;
-    top: 210px;
-    right: -450px;
+    top: 195px;
     background-color: #3b5998;
     color: white;
 }
+/* #left {
+    align-content: center;
+} */
 #email {
     margin-right: 5px;
 }
@@ -80,20 +85,23 @@ body {
 }
 #email-label, #password-label {
     color: white;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 12px;
+    margin: 0 5px 0 5px;
 }
-.flip-container.active .flipper, .flip-container.active .flipper, .flip-container.flip .flipper {
-    -webkit-transition-delay: .5s; /* Safari */
-    transition-delay: .5s;
-}
-.flip-container.active .flipper, .flip-container.active .flipper, .flip-container.flip .flipper {
+/* .flip-container.active .flipper, .flip-container.active .flipper, .flip-container.flip .flipper {
+    -webkit-transition-delay: .3s; /* Safari */
+    /* transition-delay: .3s;
+} */
+/* .flip-container.active .flipper, .flip-container.active .flipper, .flip-container.flip .flipper {
 	transform: rotateY(180deg);
-}
-.flip-container {
+} */
+/* .flip-container {
   -webkit-perspective: 1000;
   -moz-perspective: 1000;
   -o-perspective: 1000;
   perspective: 1000;
-}
+} */ 
 /* flip the pane when hovered */
 /*
 .flip-container:hover .flipper,
@@ -106,7 +114,7 @@ body {
 .flip-container,
 .front,
 .back {
-  width: 250px;
+  width: 100%;
   height: 275px;
   margin-bottom: 40px;
 }
@@ -156,6 +164,24 @@ goes here */
   -o-transform: rotateY(180deg);
 	transform: rotateY(180deg);
 }
-
+@media only screen 
+    and (min-device-width: 375px)
+    and (max-device-width: 667px)
+    and (-webkit-min-device-pixel-ratio: 2) {
+        body, .main-content
+ {
+        width: 100%;
+ }     
+}
+@media only screen 
+and (min-device-width: 1200px) 
+and (max-device-width: 1600px) 
+and (-webkit-min-device-pixel-ratio: 2)
+and (min-resolution: 192dpi) { 
+     .main-content
+    {
+           width: 33.3%;
+    } 
+}
 
 
