--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -111,16 +111,17 @@ body {
     -o-transform: rotateY(180deg);
 	transform: rotateY(180deg);
 }*/
-.flip-container,
+/* .flip-container,
 .front,
 .back {
   width: 100%;
   height: 275px;
   margin-bottom: 40px;
-}
+} */
+
 /* flip speed
 goes here */
-
+/* 
 .flipper {
   -webkit-transition: 0.65s;
 	-webkit-transform-style: preserve-3d;
@@ -135,11 +136,11 @@ goes here */
 	transform-style: preserve-3d;
   
   position: relative;
-}
+} */
 /* hide back of pane during swap */
 
-.front,
-.back {
+/* .front,
+.back, .back2 {
   -webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
   -o-backface-visibility: hidden;
@@ -147,23 +148,29 @@ goes here */
   position: absolute;
   top: 0;
   left: 0;
-}
+} */
 
 /* front pane, placed above back */
 
-.front {
+/* .front {
   z-index: 2;
   /* for firefox 31 */
-  transform: rotateY(0deg);
-}
+  /* transform: rotateY(0deg);
+} */ 
 /* back, initially hidden pane */
 
-.back {
+/* .back {
   -webkit-transform: rotateY(180deg);
 	-moz-transform: rotateY(180deg);
   -o-transform: rotateY(180deg);
 	transform: rotateY(180deg);
-}
+} */
+/* .back2 {
+    -webkit-transform: rotateY(-180deg);
+      -moz-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+      transform: rotateY(-180deg);
+  } */
 @media only screen 
     and (min-device-width: 375px)
     and (max-device-width: 667px)
