--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -227,8 +227,8 @@ and (max-device-width: 1199px)
     z-index: 2 !important;
 }
 footer {
-    position: absolute;
+    position: fixed !important;
     height: 4em;
     width: 100%;
-    bottom: 0px;
+    bottom: 0px !important;
 }
